Archive2/9e/00330f84a34031/output
main.cpp:31:1: error: prototype for ‘time::time(int, int, int)’ does not match any in class ‘time’
 time::time(int houre,int minut,int second)
 ^
main.cpp:4:7: error: candidates are: constexpr time::time(time&&)
 class time
       ^
main.cpp:4:7: error:                 constexpr time::time(const time&)
main.cpp:4:7: error:                 time::time()
main.cpp: In member function ‘void time::settime(int, int, int)’:
main.cpp:39:12: error: ‘setminut’ was not declared in this scope
  setminut(m);
            ^
main.cpp:40:12: error: ‘setscond’ was not declared in this scope
  setscond(s);
            ^
main.cpp: In member function ‘void time::sethour(int)’:
main.cpp:48:1: error: expected ‘;’ before ‘}’ token
 }
 ^
main.cpp: At global scope:
main.cpp:49:26: error: no ‘void time::setminut(int)’ member function declared in class ‘time’
 void time::setminut(int m)
                          ^
main.cpp:55:26: error: no ‘void time::setscond(int)’ member function declared in class ‘time’
 void time::setscond(int s)
                          ^
main.cpp: In member function ‘int time::getminut()’:
main.cpp:63:12: error: ‘minut’ was not declared in this scope
     return minut;
            ^
main.cpp: At global scope:
main.cpp:69:21: error: no ‘int time::getscond()’ member function declared in class ‘time’
  int time::getscond()
                     ^
main.cpp: In member function ‘int time::getminut()’:
main.cpp:64:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
